Fixed cart qty for > 9 items (dynamic alignment)

--- a/stylesAccordian.css
+++ b/stylesAccordian.css
@@ -4,12 +4,6 @@
     top:0px;
 }
 
-#reckersLogo {
-    width:400px;
-    height:auto;
-    padding-left:100px;
-}
-
 #reckers_header {
     height:92%;
     width:auto;
@@ -31,8 +25,7 @@
     color:red;
     font-size:14pt;
     padding-right:8px;
-    margin-bottom:3px;
-    padding-bottom:4px;
+    margin-top:0;
 }
 
 .orderFooter {
@@ -244,7 +237,7 @@
     padding-right:0;
     margin-left:20%;           /* centered */
     width:60%;
-    background-image: url('img/header_sandwiches.png') !important;
+    background-image: url('img/header_piadina.png') !important;
     color:white;
     font-family: Helvetica, Arial, sans-serif;
 }
